fix text overflowing on long task names

--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -1,6 +1,5 @@
 .tasks__task {
   margin: 7px;
-  /* margin-right: 0; */
   border-bottom: 0.25px solid white;
 
   position: relative;
@@ -12,55 +11,30 @@
   /* adding a third auto makes the end of the line move back left */
 
   text-overflow: ellipsis;
-  max-width: 72vw;
+  overflow-x: hide;
 }
 
-.task__dots {
-  height: 17px;
-  width: 17px;
-  background-color: white;
-  border-width: 1px;
-  border-radius: 100%;
-  display: inline-block;
-  opacity: 0;
-  align-self: right;
-  margin-left: 7px;
-  text-align: center;
-}
-
-.task__dot {
-  height: 3px;
-  width: 3px;
-  background-color: green;
-  border-radius: 50%;
-  display: inline-block;
-  justify-self: left;
-  opacity: 0;
-}
 
 .task__file__icon {
-  /* height: 16px; */
-  /* display: inline-block; */
-  /* opacity: 0; */
-  /* align-self: right; */
   margin-left: 7px;
-  /* text-align: center; */
 }
 
 .task__right {
   display: inline-block;
   align-self: right;
-  overflow-x: hidden;
+  margin-left: 7px;
+  min-width: 110px;
+  text-align: right;
 }
 
 .task__left {
   display: flex;
+  overflow-x: hidden;
 }
 
 .task__title {
   text-overflow: ellipsis;
   overflow: hidden;
-  max-width: 58vw;
 }
 
 .task__done {
@@ -78,12 +52,6 @@
   font-style: italic;
 }
 
-/*
-.tasks__task:hover {
-  cursor: pointer;
-  right: -5px;
-} */
-
 .tasks__task:hover,
 .tasks__task .task__dots,
 .task__dots .task__dot,
@@ -93,6 +61,22 @@
   right: -5px;
 }
 
-/* .tasks__task:hover > .task__dot {
-  opacity: 100;
-} */
+.task__dots {
+  height: 17px;
+  min-width: 17px;
+  background-color: white;
+  border-width: 1px;
+  border-radius: 100%;
+  margin-left: 7px;
+  text-align: center;
+}
+
+.task__dot {
+  height: 3px;
+  width: 3px;
+  background-color: green;
+  border-radius: 50%;
+  display: inline-block;
+  justify-self: left;
+  opacity: 0;
+}
